--- a/Votacio/config.css
+++ b/Votacio/config.css
@@ -172,16 +172,21 @@ body.type-brainstorm-poll .form-column:last-child .form-group { display: grid; g
 body.type-poll #poll-options,
 body.type-brainstorm-poll #poll-options { min-height: 360px; height: 100%; }
 
-body.type-poll #poll-options {
-    margin-top: 0.5rem;
-}
-
 body.type-poll .form-column:first-child > .question-group {
     margin-top: -0.8rem;
 }
 
 body.type-poll .form-column:first-child {
     gap: 0.4rem;
+    margin-top: -1rem;
+}
+
+body.type-poll .form-column:last-child {
+    margin-top: 0.65rem;
+}
+
+body.type-poll #poll-options {
+    margin-top: 0.5rem;
 }
 
 
