--- a/Votacio/config.css
+++ b/Votacio/config.css
@@ -185,9 +185,16 @@ body.type-poll #poll-options {
     margin-top: 0.5rem;
 }
 
+body.type-poll .question-group {
+    gap: 0;
+}
+
 body.type-poll .question-group label {
     display: inline-block;
-    padding-top: 0.55rem;
+    position: relative;
+    top: 0.55rem;
+    margin-bottom: -0.45rem;
+    padding-top: 0;
 }
 
 
